--- a/weblui/app/views/new.html
+++ b/weblui/app/views/new.html
@@ -39,6 +39,12 @@
 
   <div class="row">
     <div class="centered six columns">
+      <pre class="output"></pre>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="centered six columns">
       <div id="canvas"></div>
     </div>
   </div>
