--- a/weblui/app/views/index.html
+++ b/weblui/app/views/index.html
@@ -11,7 +11,7 @@
       <div class="button">
         <div class="medium go-button btn"><input class="go" type="submit" value="Go" /></div>
         <a href="/list" class="list-sitemaps-btn">list available sitemaps</a>
-        <div class="loader"></div>
+        <div class="loader default-background"></div>
       </div>
     </div>
   </div>
