--- a/weblui/app/views/index.html
+++ b/weblui/app/views/index.html
@@ -16,8 +16,10 @@
     </div>
   </div>
 
-  {{template "_output"}}
-
+  <div class="terminal-container">
+    {{template "_output"}}
+  </div>
+  
   <div class="row">
     <div class="centered twelve columns">
       <div id="canvas"></div>
